Extended to provide more thorough test

--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html>
   <head>
     <title>Basic Web page</title>
+    <meta charset=utf-8>
+    <script type="text/javascript" src="ll.js"></script>
+    <style>@import url(default.css)</style>
   </head>
   <body>
     <h1>Hello World</h1>
+    <audio controls="controls" loop="loop" autoplay="autoplay">
+      <source src="laser.wav" type="audio/wav">
+    Could not load laser.wav.
+    </audio>
+    <img src="warning.gif" />
+    <img src="underconstruction.gif" />
+    <img src="draw.jpg" width="1024" height="568" />
   </body>
 </html>
+
